--- a/index.html
+++ b/index.html
@@ -842,7 +842,7 @@ Minimum $5</h3>
                 responsive: {
                     0: {
                         items: 1,
-                        nav: false
+                        nav: true
                     },
                     576: {
                         items: 2,
