--- a/index.html
+++ b/index.html
@@ -829,13 +829,13 @@ Minimum $5</h3>
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script>
+        <script>
         $(document).ready(function () {
             $('.owl-carousel').owlCarousel({
                 loop: true,
                 margin: 0,
                 center: false,
-                autoplay: true,
+                autoplay: false,
                 autoplayTimeout: 1500,
                 autoplayHoverPause: true,
                 responsiveClass: true,
@@ -844,8 +844,14 @@ Minimum $5</h3>
                         items: 1,
                         nav: true
                     },
+
                     576: {
-                        items: 2,
+                        items: 1,
+                        nav: false
+                    },
+
+                    768: {
+                        items: 1,
                         nav: false
                     },
 
