--- a/index.html
+++ b/index.html
@@ -821,48 +821,48 @@ Minimum $5</h3>
   </script>
 
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        <script>
-        $(document).ready(function () {
-            $('.owl-carousel').owlCarousel({
-                loop: true,
-                margin: 0,
-                center: false,
-                autoplay: false,
-                autoplayTimeout: 1500,
-                autoplayHoverPause: true,
-                responsiveClass: true,
-                responsive: {
-                    0: {
-                        items: 1,
-                        nav: true
-                    },
+   <script>
+       $(document).ready(function () {
+           $('.owl-carousel').owlCarousel({
+               loop: true,
+               mouseDrag: false,
+               margin: 0,
+               center: false,
+               autoplay: true,
+               autoplayTimeout: 1500,
+               autoplayHoverPause: true,
+               responsiveClass: true,
+               responsive: {
+                   0: {
+                       items: 1,
+                       nav: true
+                   },
 
-                    576: {
-                        items: 1,
-                        nav: false
-                    },
+                   576: {
+                       items: 1,
+                       nav: false
+                   },
 
-                    768: {
-                        items: 1,
-                        nav: false
-                    },
+                   768: {
+                       items: 1,
+                       nav: false
+                   },
 
-                    992: {
-                        items: 2,
-                        nav: false
-                    },
+                   992: {
+                       items: 2,
+                       nav: false
+                   },
 
-                    1200: {
-                        items: 3,
-                        nav: true,
-                        loop: false
-                    }
-                }
-            });
+                   1200: {
+                       items: 3,
+                       nav: true,
+                       loop: false
+                   }
+               }
+           });
 
-        })
-    </script>
+       })
+   </script>
 
 
 
