--- a/index.html
+++ b/index.html
@@ -815,58 +815,55 @@ Minimum $5</h3>
     </div>  
   </section>         
 
-         <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+                <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
       AOS.init();
   </script>
 
 
-   <script>
-       $(document).ready(function () {
-           $('.owl-carousel').owlCarousel({
-               loop: true,
-               mouseDrag: false,
-               margin: 0,
-               center: false,
-               autoplay: true,
-               autoplayTimeout: 1500,
-               autoplayHoverPause: true,
-               responsiveClass: true,
-               responsive: {
-                   0: {
-                       items: 1,
-                       nav: true
-                   },
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script>
+        $(document).ready(function () {
+            $('.owl-carousel').owlCarousel({
+                loop: true,
+                mouseDrag: false,
+                margin: 0,
+                center: false,
+                autoplay: true,
+                autoplayTimeout: 1500,
+                autoplayHoverPause: true,
+                responsiveClass: true,
+                responsive: {
+                    0: {
+                        items: 1,
+                        nav: true
+                    },
 
-                   576: {
-                       items: 1,
-                       nav: false
-                   },
+                    576: {
+                        items: 1,
+                        nav: false
+                    },
 
-                   768: {
-                       items: 1,
-                       nav: false
-                   },
+                    768: {
+                        items: 1,
+                        nav: false
+                    },
 
-                   992: {
-                       items: 2,
-                       nav: false
-                   },
+                    992: {
+                        items: 2,
+                        nav: false
+                    },
 
-                   1200: {
-                       items: 3,
-                       nav: true,
-                       loop: false
-                   }
-               }
-           });
+                    1200: {
+                        items: 3,
+                        nav: true,
+                        loop: false
+                    }
+                }
+            });
 
-       })
-   </script>
-
-
-
-
+        })
+    </script>
       
       <footer class="footer padding-tb-50" >
     <div class="container text-sm-left">
