--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <html lang="en">
 <head><meta charset="utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1.0" /><title>
-	A Phone Validator API - My ASP.NET Applicateion
+	Verify SSN owner and Skip Tracing APIs in XML and JSON formats
 </title><script src="https://dilsondecano.github.io/people-search-api/Scripts/modernizr-2.8.3.js"></script>
 <link href="https://dilsondecano.github.io/people-search-api/Content/bootstrap.css" rel="stylesheet"/>
 <link href="https://dilsondecano.github.io/people-search-api/Content/Site.css" rel="stylesheet"/>
@@ -15,7 +15,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="https://www.searchbug.com/css/bootstrap.min.css" /><link rel="stylesheet" href="https://www.searchbug.com/css/app2.css" />
-
+<meta name="description" content="Integrate into your system: Verify SSN owner name, address and phone, Determine if a SSN is valid and when and where it was issued" />
     <!-- Open Graph data -->
 <meta property="og:locale" content="en_US" /><meta property="og:type" content="website" /><meta property="og:title" content="Search People, Identify and Find Phone Numbers, Property Addresses, and Email Address." /><meta property="og:description" content="Searchbug, a professional and true people search. Find names, phone numbers, property addresses, &amp; email addresses. First people search free plus 500 bonus $earch Tokens. Instant results, batch files, API, and professional assisted searches." /><meta property="og:url" content="https://www.searchbug.com" /><meta property="og:image" content="https://www.searchbug.com/images/og/search-people-verify-append-name-address-phone-email.png" />
 
