--- a/index.html
+++ b/index.html
@@ -845,7 +845,7 @@ Minimum $5</h3>
 <h3 class="clr-text-color-1">
   No Subscription Fees. Only Pay for Data You Get. <br />Estimate Your Costs and Verify Data Now!
 </h3>
-<button class="btn-orange mt-4">Contact Us Now</button> 
+<button class="btn-orange mt-4" onclick="window.location.href='https://www.searchbug.com/contact-us.aspx';" type="button">Contact Us Now</button> 
             </div>
             <div class="col-md-3 order-first order-md-0">
                 <img src="https://dilsondecano.github.io/people-search-api/images/get-information-icon.png" alt="Skip Tracing SSN API Get Information" data-aos="fade" data-aos-duration="300" data-aos-once="true" />
