--- a/index.html
+++ b/index.html
@@ -742,7 +742,7 @@ Minimum $5</h3>
 <p>Cost is <strong>$0.77 to $0.30 per hit</strong>, depending on volume. No charge, if info not found.</p>
 
 <p>The rate automatically goes down as your monthly volume increases. The price resets on the 1st of each month.</p>
-      <button class="btn-orange mt-4">Estimate</button> <button class="btn-gray mt-4">View API documentation</button>
+      <button class="btn-orange mt-4" onclick="window.location.href='#stsa-estimate-your-cost';" type="button">Estimate</button> <button class="btn-gray mt-4">View API documentation</button>
           </div>
   </div>
 
@@ -760,7 +760,7 @@ Minimum $5</h3>
 <p>This API is restricted and available only to verified businesses. <strong>Review Restricted Access application process below.</strong></p>
 
 <p>Cost is <strong>$1.97 per query</strong>.</p>
-      <button class="btn-orange mt-4">Estimate</button> <button class="btn-gray mt-4">View API documentation</button>
+      <button class="btn-orange mt-4" onclick="window.location.href='#stsa-estimate-your-cost';" type="button">Estimate</button> <button class="btn-gray mt-4">View API documentation</button>
           </div>
   </div>
 
@@ -780,7 +780,7 @@ Minimum $5</h3>
 <p>Cost is <strong>$0.77 to $0.30 per query</strong> (match or no match), depending on volume.</p>
 
 <p>The rate automatically goes down as your monthly volume increases. The price resets on the 1st of each month.</p>
-      <button class="btn-orange mt-4">Estimate</button> <button class="btn-gray mt-4">View API documentation</button>
+      <button class="btn-orange mt-4" onclick="window.location.href='#stsa-estimate-your-cost';" type="button">Estimate</button> <button class="btn-gray mt-4">View API documentation</button>
           </div>
   </div>
         </section>    
